deixando a consulta em cidade e estado em ordem alfabética